# VaR_Calculator

./: .gitignore  LICENSE  MANIFEST.in  README.md  main.py  requirements.txt  setup.cfg  setup.py
config/: logging.conf  settings.py
data/portfolios/: portfolio_iammohith_NSE_RELIANCE_20250716_101928.csv
src/: cli.py  data_fetcher.py  historical_var.py  monte_carlo_var.py  parametric_var.py  report_generator.py  utils.py
src/calculator/: historical_var.py  monte_carlo_var.py  parametric_var.py
src/core/: data_fetcher.py  exceptions.py  risk_report.py
src/var_calculator/: __init__.py  cli.py
src/var_calculator/calculator/: historical_VaR.py  monte_carlo_VaR.py  parametric_VaR.py
src/var_calculator/core/: __init__.py  data_fetcher.py  exceptions.py  report_VaR.py  utils.py
