[metadata]
name = VaR-calculator
version = 0.1.0
description = Value at Risk Calculator for Indian Stocks
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/iammohith/VaR_Calculator
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
package_dir = 
    = src
packages = find:
install_requires =
    yfinance
    numpy
    pandas
    scipy
    matplotlib
python_requires = >=3.7
include_package_data = True

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    VaR-calculator = var_calculator.cli:main
