[metadata]
name = VaR_Calculator
version = 0.1.0
author = iammohith
author_email = mohithsaigorla4@gmail.com
description = VaR Calculator for Indian Stocks
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/iammohith/VaR_Calculator
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    yfinance
    numpy
    pandas
    scipy
    matplotlib

[options.packages.find]
where = src
